--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<hr>
 		</section>
 		<section>
-			<p><figure align="center"><img src="Multimedia/Imágenes/dise.png" width="50%" height="50%" alt="disenador"></figure></p>
+			<p><figure align="center"><img src="Multimedia/Imágenes/dise.png" width="50%" height="50%" alt="dise"></figure></p>
 		</section>
 	</article>
 	
