--- a/Otros HTML/sobre_mi.html
+++ b/Otros HTML/sobre_mi.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="../Multimedia/Imágenes/aboutme.png">
 </head>
 
-<body style="background-image: url('../Multimedia/Imágenes/fondo_sobremi.PNG'); background-color: gray">
+<body style="background-image: url('../Multimedia/Imágenes/fondo_sobremi.png'); background-color: gray">
 	<header><h1 align="center" style="color: aliceblue"><big>Sobre mí</big></h1></header>
 	
 	<article>
